Added cursor:pointer and user-select:none to FAQ summary to make it appear clickable, and to prevent accidental marking of text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -616,6 +616,9 @@ section#faq-contact {
       font-weight: var(--fw-semi);
       line-height: 21px;
       padding: 1rem;
+      cursor: pointer;
+      user-select: none;
+
 
       /* Hide marker */
       list-style: none;
