Added bgcolor change on FAQ-questions when hovering

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -618,6 +618,11 @@ section#faq-contact {
       padding: 1rem;
       cursor: pointer;
       user-select: none;
+      transition: var(--transition-default);
+
+      &:hover {
+        background-color: var(--color-faqchevronbg);
+      }
 
 
       /* Hide marker */
