--- a/styles/styles.css
+++ b/styles/styles.css
@@ -726,6 +726,54 @@ section#reviews {
           /* FAQ-contact end */
           /* Subscribe start */
           
+.subscribe-container {
+  margin-inline: var(--wrapper-pi);
+  padding: 3rem 1rem 0;
+  background-color: var(--color-gray-100);
+
+  display: flex;
+  flex-direction: column;
+
+  .cta {
+    display: flex;
+    align-items: center;
+
+    h2 {
+      font-size: 22px;
+      line-height: 30px;
+    }
+    
+    img {
+      margin-right: 1rem;
+    }
+  }
+  .email-form {
+
+  }
+  .input-container {
+    margin-top: 2.5rem;
+    margin-bottom: 2rem;
+    display: flex;
+    * {
+      border: none;
+    }
+    input {
+      flex-grow: 1;
+      min-width: 0; /* prevent button from being pushed outside padding */
+      font-size: 16px;
+      padding: 1rem;
+      border-radius: 8px 0 0 8px;
+      border: 1px solid var(--color-gray-400);
+    }
+    .btn-subscribe {
+      border-radius: 0 8px 8px 0;
+      font-size: 16px;
+      line-height: 26px;
+      font-weight: var(--fw-semi);
+    }
+  }
+}
+
           /* Subscribe end */
           /* Footer start */
 
