--- a/styles/styles.css
+++ b/styles/styles.css
@@ -571,24 +571,26 @@ section#reviews {
   grid-template-columns: 1fr;
   margin-bottom: 2.5rem;
 
-  h2 {
-    color: var(--color-heading);
-    margin-top: 3rem;
-    font-size: 25px;
-    font-weight: var(--fw-extra);
+  .header {
+    h2 {
+      color: var(--color-heading);
+      margin-top: 3rem;
+      font-size: 25px;
+      font-weight: var(--fw-extra);
+    }
+    
+    .headline-splitter {
+      display: none;
+    }
+    
+    p {
+      margin-top: 1rem;
+      font-size: var(--fs-body-l);
+      line-height: 29px;
+      color: var(--color-paragraph);
+    }
   }
-
-  .headline-splitter {
-    display: none;
-  }
-
-  p {
-    margin-top: 1rem;
-    font-size: var(--fs-body-l);
-    line-height: 29px;
-    color: var(--color-paragraph);
-  }
-
+    
   .faq-accordion {
     --_faq-border: 1px solid var(--color-faqoutline);
     margin-top: 3rem;
@@ -885,15 +887,17 @@ section#reviews {
   /* FAQ-Contact section */
   .faq-contact-container {
     margin-bottom: 1.75rem;
-    h2 {
-      font-size: var(--fs-h2);
-      line-height: 130%;
+    .header {
+      h2 {
+        font-size: var(--fs-h2);
+        line-height: 130%;
+      }
+      
+      .headline-splitter {
+        display: inline;
+      }
     }
-
-    .headline-splitter {
-      display: inline;
-    }
-
+      
     .faq-accordion {
       /* Start by removing FAQ borders */
       --_faq-border: unset;
@@ -917,6 +921,10 @@ section#reviews {
     }
     .contact {
       margin-top: 2rem;
+    }
+
+    .subscribe {
+
     }
   }
 }
