--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,7 @@ a {
   background-color: var(--color-primary);
   color: var(--color-white);
   border-radius: 8px;
+  border: none;
   padding: 11px 22px;
   display: flex;
   justify-content: center;
@@ -561,19 +562,71 @@ section#payment {
 }
 
 .payment-container {
-  display: flex;
-  justify-content: start;
-  align-items: start;
-  flex-direction: column;
   margin-top: 8rem;
+  padding-inline: 8rem;
+  display: grid;
+  grid-template-columns: 1fr 1.1fr;
+  justify-content: start;
+  align-items: center;
+  gap: 8rem 4rem;
 
-  .top-area {
-    display: flex;
+  h2 {
+    font-size: var(--fs-h2);
+    line-height: 130%;
   }
 
-  .bottom-area {
+  li, p {
+    color: var(--color-paragraph);
+  }
+
+  ul {
+    margin-top: 2rem;
+    list-style-type: none;
+  }
+
+  li {
     display: flex;
-    margin-top: 20rem;
+    img {
+      margin-right: .5rem;
+    }
+  }
+
+  li:not(:first-child) {
+    margin-top: 1rem;
+  }
+
+  .btn-learn-more {
+    margin-top: 3rem;
+    font-size: var(--fs-body-s);
+    font-weight: var(--fw-semi);
+    line-height: 160%;
+    i {
+      margin-left: 1rem;
+    }
+  }
+
+  .cards {
+    display: flex;
+    margin-top: 2rem;
+    gap: 2rem;
+  }
+
+  .card {
+    flex-basis: 100%;
+    p {
+      margin-top: 1rem;
+    }
+  }
+
+  .card-img-container {
+    flex-shrink: 0; /*Prevent flex container from shrinking box below 60x60*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    background-color: var(--color-feature-cards-img-bg);
+    border-radius: 8px;
   }
 
   .img-container {
@@ -584,13 +637,34 @@ section#payment {
     position: absolute;
   }
 
-  .img-container.bottom {
-    width: 500px;
+  .img-container.top {
+    width: 470px;
+    height: 452px;
   }
 
-  .cards {
-    display: flex;
+  .img-transfer.back {
+    top: 0;
+    left: 0;
+  }
 
+  .img-transfer.front {
+    top: 335px;
+    left: 210px;
+  }
+
+  .img-container.bottom {
+    width: 458px;
+    height: 450px;
+  }
+
+  .img-payment.back {
+    top: 0;
+    left: 0;
+  }
+
+  .img-payment.front {
+    top: 105px;
+    left: 135px;;
   }
 }
 
