--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,13 @@
   --color-how-bg-white: var(--color-gray-100);
   --color-how-bg-dark: #1c2029; /* Doesn't match any of grayscale colors? */
 
+  --color-reviewsbg-whitebg: var(--color-gray-100);
+  --color-reviewsbg-darkbg: #151822;
+  --color-reviewbg-whitebg: var(--color-white);
+  --color-reviewbg-darkbg: #1E212B;
+  --color-reviewrole-whitebg: var(--color-gray-600);
+  --color-reviewrole-darkbg: #8E9095;
+
   --color-faqbg-whitebg: var(--color-bg-white);
   --color-faqbg-darkbg: #151822; /* Doesn't match any of grayscale colors? */
   --color-faqoutline-whitebg: #e2e5f1;
@@ -49,6 +56,7 @@
   --color-faqchevronarrow-darkbg: var(--color-white);
   --color-subscribebg-whitebg: var(--color-gray-100);
   --color-subscribebg-darkbg: var(--color-faqbg-darkbg);
+
   
   /* Default theme - white/light */
   --color-bg: var(--color-bg-white);
@@ -62,6 +70,9 @@
   --color-chevronarrow: var(--color-chevronarrow-whitebg);
   --color-feature-cards-img-bg: var(--color-feature-cards-img-bg-bgwhite);
   --color-how-bg: var(--color-how-bg-white);
+  --color-reviewsbg: var(--color-reviewsbg-whitebg);
+  --color-reviewbg: var(--color-reviewbg-whitebg);
+  --color-reviewrole: var(--color-reviewrole-whitebg);
   --color-faqbg: var(--color-faqbg-whitebg);
   --color-faqoutline: var(--color-faqoutline-whitebg);
   --color-faqchevronbg: var(--color-faqchevronbg-whitebg);
@@ -95,6 +106,7 @@
 
   /* Font weights */
   --fw-extra: 800;
+  --fw-bold: 700;
   --fw-semi: 600;
   --fw-reg: 400;
 
@@ -558,11 +570,11 @@ section#how {
 
 section#payment {
   display: none;
-  height: 1000px; /* Temp */
 }
 
 .payment-container {
   margin-top: 8rem;
+  margin-bottom: 8rem;
   padding-inline: 8rem;
   display: grid;
   grid-template-columns: 1fr 1.1fr;
@@ -673,6 +685,66 @@ section#payment {
 
 section#reviews {
   display: none;
+  background-color: var(--color-reviewsbg);
+}
+
+.reviews-container {
+  padding: 5rem 1.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  gap: 1.5rem;
+
+  h2 {
+    font-size: var(--fs-h1); /* 40px in figma */
+    font-weight: var(--fw-extra);
+    line-height: 130%;
+  }
+
+  .review {
+    padding: 3rem 1.5rem 1.5rem;
+    background-color: var(--color-reviewbg);
+    border-radius: 8px;
+    box-shadow: 0px 2px 5px var(--color-gray-300);
+    position: relative;
+  }
+
+  .img-quote-icon {
+    position: absolute;
+    top: -22px;
+    left: 16px;
+  }
+
+  blockquote {
+    img {
+      margin-bottom: 1rem;
+    }
+    p {
+      color: var(--color-paragraph);
+      font-size: var(--fs-body-l);
+    }
+  }
+
+  .author {
+    margin-top: 1.5rem;
+    display: flex;
+  }
+
+  .author-details {
+    margin-left: 1rem;
+
+    .author-name {
+      font-size: var(--fs-body-m);
+      font-weight: var(--fw-bold);
+      line-height: 160%;
+      color: var(--color-heading);
+    }
+    .author-role {
+      font-size: var(--fs-body-s);
+      line-height: 160%;
+      color: var(--color-reviewrole);
+    }
+  }
 }
 
           /* Reviews end */
@@ -1224,6 +1296,11 @@ section#reviews {
     display: block;
   }
 
+  /* Reviews section */
+  section#reviews {
+    display: block;
+  }
+
   /* FAQ-contact section */
   .faq-contact-container {
     margin-top: 7rem;
@@ -1286,6 +1363,9 @@ section#reviews {
     --color-chevronarrow: var(--color-chevronarrow-darkbg);
     --color-feature-cards-img-bg: var(--color-feature-cards-img-bg-bgdark);
     --color-how-bg: var(--color-how-bg-dark);
+    --color-reviewsbg: var(--color-reviewsbg-darkbg);
+    --color-reviewbg: var(--color-reviewbg-darkbg);
+    --color-reviewrole: var(--color-reviewrole-darkbg);
     --color-faqbg: var(--color-faqbg-darkbg);
     --color-faqoutline: var(--color-faqoutline-darkbg);
     --color-faqchevronbg: var(--color-faqchevronbg-darkbg);
@@ -1299,6 +1379,9 @@ section#reviews {
     }
     .hero-container .pitch {
       color: var(--color-white);
+    }
+    .review {
+      box-shadow: unset;
     }
     .chevron-dn-img {
       content: url('/assets/icons/chevron-dn-dark.svg');
@@ -1350,6 +1433,9 @@ section#reviews {
     --color-chevronarrow: var(--color-chevronarrow-darkbg);
     --color-feature-cards-img-bg: var(--color-feature-cards-img-bg-bgdark);
     --color-how-bg: var(--color-how-bg-dark);
+    --color-reviewsbg: var(--color-reviewsbg-darkbg);
+    --color-reviewbg: var(--color-reviewbg-darkbg);
+    --color-reviewrole: var(--color-reviewrole-darkbg);
     --color-faqbg: var(--color-faqbg-darkbg);
     --color-faqoutline: var(--color-faqoutline-darkbg);
     --color-faqchevronbg: var(--color-faqchevronbg-darkbg);
@@ -1364,6 +1450,9 @@ section#reviews {
     }
     .hero-container .pitch {
       color: var(--color-white);
+    }
+    .review {
+      box-shadow: unset;
     }
     .chevron-dn-img {
       content: url('/assets/icons/chevron-dn-dark.svg');
